make login and registration page

--- a/frontend/src/pages/single/single.scss
+++ b/frontend/src/pages/single/single.scss
@@ -26,8 +26,8 @@
                     padding: 7px 20px;
                     font-size: 16px;
                     font-weight: 600;
-                    color: #7451f8;
-                    background-color: #7551f818;
+                    color: #00B0FC;
+                    background-color: #A4DFFD;
                     border-radius: 5px;
                     cursor: pointer;
 
