--- a/frontend/src/components/list/list.scss
+++ b/frontend/src/components/list/list.scss
@@ -15,7 +15,7 @@
                 border-radius: 50%;
                 object-fit: cover;
                 margin-right: 10px;
-                border: 1px solid #210876;
+                border: 1px solid #00B0FC;
             }
 
         }
