--- a/frontend/src/components/sidebar/sidebar.scss
+++ b/frontend/src/components/sidebar/sidebar.scss
@@ -13,7 +13,7 @@
         .logo{
             font-size: 20px;
             font-weight: bold;
-            color: #210876;
+            color: #00B0FC;
         }
     }
 
@@ -40,12 +40,12 @@
                 cursor: pointer;
 
                 &:hover{
-                    background-color: #b3a4fe;
+                    background-color: #A4DFFD;
                 }
 
                 .icon{
                     font-size: 22px;
-                    color: #210876;
+                    color: #00B0FC;
                 }
 
                 span{
