--- a/frontend/src/pages/new/new.scss
+++ b/frontend/src/pages/new/new.scss
@@ -73,7 +73,7 @@
                         padding: 10px;
                         margin: 10px 0;
                         border: none;
-                        background-color: #210876;
+                        background-color: #00B0FC;
                         color: white;
                         font-weight: bold;
                         cursor: pointer;
